# cpp-20

./: .gitignore  README.md
Concepts/: CMakeLists.txt  Makefile  Readme.Md  basics.cpp
Parallel_Algorithms/: CMakeLists.txt  Makefile  Readme.Md  main.cpp
Ranges/: Readme.Md  main.cpp
